--- a/.gitignore
+++ b/.gitignore
@@ -7,12 +7,15 @@
 src/C
 src/Python
 src/testneuron1/Plots
+# Ignore all contents under NeuronModels subdirectories recursively
+NeuronModels/**/
+# But keep the Python files in NeuronModels
+!NeuronModels/*.py
+# Keep empty directories by ignoring everything but keeping .gitkeep files if they exist
+!NeuronModels/**/.gitkeep
 NeuronModels/t1.py
 NeuronModels/dum.py
-NeuronModels/SynapticNeuron_Plots/*
-NeuronModels/Halfcentre_Plots/*
 NeuronModels/gptcode.py
-NeuronModels/param_sweep/**
 
 # ========================
 # Simulink Embedded Coder
